fix: fix resource text in safari and simplify clipping

--- a/src/planner2/components/BlockResource.less
+++ b/src/planner2/components/BlockResource.less
@@ -26,6 +26,7 @@
         color: @bw-gray;
         text-anchor: start;
         height: 18px;
+        overflow: visible;
 
         font-size: 12px;
         line-height: 18px;
@@ -35,9 +36,6 @@
             text-overflow: ellipsis;
             white-space: nowrap;
             display: block;
-        }
-        &.sub {
-            opacity: 0.7;
         }
         &.resource-name {
             font-weight: 700;
